--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
   <header>
-    <h1>CRUD Departamento e Produto</h1>
     <nav>
-      <a th:href="@{/departamentos}">Departamentos</a> |
-      <a th:href="@{/produtos}">Produtos</a>
+      <h1>CRUD Departamento e Produto</h1>
+      <div class="titulo">
+        <a th:href="@{/departamentos}">Departamentos</a>
+        <a th:href="@{/produtos}">Produtos</a>
+      </div>
     </nav>
   </header>
   <main>
-      <p>Bem-vindo ao sistema.</p>
-    </section>
+      <p id="bem-vindo">Bem-vindo ao sistema!</p>
   </main>
 </body>
 </html>
