--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -6,25 +6,29 @@
     <link rel="stylesheet" th:href="@{/styles/style.css}" href="/styles/style.css">
 </head>
 <body>
-  <header><h1>Produtos</h1><a th:href="@{/}">Home</a></header>
+  <header>
+      <h1>Produtos</h1><a th:href="@{/}">Home</a>
+  </header>
   <main>
-    <a th:href="@{/produtos/novo}">Novo Produto</a>
-    <table>
-      <thead><tr><th>Nome</th><th>Preço</th><th>Departamento</th><th>Ações</th></tr></thead>
-      <tbody>
-        <tr th:each="p : ${produtos}">
-          <td th:text="${p.nome}">Nome</td>
-          <td th:text="${p.preco}">0.00</td>
-          <td th:text="${p.departamento != null ? p.departamento.nome : '—'}">Dept</td>
-          <td>
-            <a th:href="@{'/produtos/editar/' + ${p.id}}">Editar</a>
-            <form th:action="@{'/produtos/excluir/' + ${p.id}}" method="post" style="display:inline">
-              <button type="submit">Excluir</button>
-            </form>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <section class="tabela">
+        <table>
+          <thead><tr><th>Nome</th><th>Preço</th><th>Departamento</th><th>Ações</th></tr></thead>
+          <tbody>
+            <tr th:each="p : ${produtos}">
+              <td th:text="${p.nome}">Nome</td>
+              <td th:text="${p.preco}">0.00</td>
+              <td th:text="${p.departamento != null ? p.departamento.nome : '—'}">Dept</td>
+              <td>
+                <a class="buttons" th:href="@{'/produtos/editar/' + ${p.id}}">Editar</a>
+                <form th:action="@{'/produtos/excluir/' + ${p.id}}" method="post" style="display:inline">
+                  <button class="buttons" type="submit">Excluir</button>
+                </form>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+    </section>
+    <a class="novo" th:href="@{/produtos/novo}">Novo Produto</a>
   </main>
 </body>
 </html>
